--- a/project/report-Junfan.RMD
+++ b/project/report-Junfan.RMD
@@ -1,4 +1,3 @@
-
 ```{r setup, include=FALSE}
 library(caret)
 library(data.table)
@@ -168,120 +167,68 @@ Sampling 20, 50, 100 rows respectively
 # Sampling 20 rows (with bad results)
 
 ```{r}
+randomforest <- function(training_data, testing_data){
+      
+    model <- ranger(
+        label~.,
+        data=training_data,
+        classification=TRUE
+    )
+    
+    predictions <- predict(model, data=testing_data)
+    
+    confusion_matrix <- table(testing_data$label, predictions$predictions)
+    
+    #print accuracy
+    print(sum(diag(confusion_matrix))/sum(confusion_matrix))
+    
+    return(confusion_matrix)
+
+}
+
+simplesampling <- function(connection_events, nsam, columnname="label"){
+  sam <- data.frame()
+  for(i in unique(connection_events[[columnname]])){
+    name = paste0("is_",i)
+    name = get(name)
+    if(nrow(name)>=nsam){
+      index = sample(c(1:nrow(name)),size=nsam)
+      sam <- rbind(sam, name[index,1:42])
+    }
+    else{
+      index = sample(c(1:nrow(name)),size=nrow(name))
+      sam <- rbind(sam, name[index,1:42])
+    }
+  }
+  return(sam)
+}
+```
+
+```{r}
 nsam = 20
 # sam: sampling data 
-sam <- data.frame()
-for(i in unique(connection_events$label)){
-  name = paste0("is_",i)
-  name = get(name)
-  if(nrow(name)>=20){
-    index = sample(c(1:nrow(name)),size=nsam)
-    sam <- rbind(sam, name[index,1:42])
-  }
-  else{
-    index = sample(c(1:nrow(name)),size=nrow(name))
-    sam <- rbind(sam, name[index,1:42])
-  }
-}
+sam <- simplesampling(connection_events, nsam)
 # sampling variable for training in decision tree and random forests
+confusion_matrix <- randomforest(sam, connection_events[,1:42])
+
 ```
 
 ## Check the performance in random forest: test all the KDD_data_10_percent
-
-```{r}
-training_data <- sam
-testing_data <- connection_events[,1:42]
-
-model <- ranger(
-    label~.,
-    data=training_data,
-    classification=TRUE
-)
-
-predictions <- predict(model, data=testing_data)
-
-confusion_matrix <- table(testing_data$label, predictions$predictions)
-
-confusion_matrix
-#print accuracy
-print(sum(diag(confusion_matrix))/sum(confusion_matrix))
-```
 
 # Sampling 50 rows (with bad results)
 
 ```{r}
 nsam = 50
-sam <- data.frame()
-for(i in unique(connection_events$label)){
-  name = paste0("is_",i)
-  name = get(name)
-  if(nrow(name)>=nsam){
-    index = sample(c(1:nrow(name)),size=nsam)
-    sam <- rbind(sam, name[index,1:42])
-  }
-  else{
-    index = sample(c(1:nrow(name)),size=nrow(name))
-    sam <- rbind(sam, name[index,1:42])
-  }
-}
-sam
-# sampling variable for training in random forests
+sam <- simplesampling(connection_events, nsam)
+confusion_matrix <- randomforest(sam, connection_events[,1:42])
 ```
-## Random forests 
-```{r}
-training_data <- sam
-testing_data <- connection_events[,1:42]
 
-model <- ranger(
-    label~.,
-    data=training_data,
-    classification=TRUE
-)
-
-predictions <- predict(model, data=testing_data)
-
-confusion_matrix <- table(testing_data$label, predictions$predictions)
-
-confusion_matrix
-
-print(sum(diag(confusion_matrix))/sum(confusion_matrix))
-```
 # Sampling 100 rows
 ```{r}
+
 nsam = 100
-sam <- data.frame()
-for(i in unique(connection_events$label)){
-  name = paste0("is_",i)
-  name = get(name)
-  if(nrow(name)>=nsam){
-    index = sample(c(1:nrow(name)),size=nsam)
-    sam <- rbind(sam, name[index,1:42])
-  }
-  else{
-    index = sample(c(1:nrow(name)),size=nrow(name))
-    sam <- rbind(sam, name[index,1:42])
-  }
-}
-# sampling variable for training in random forests
-```
-## Random forests 
-```{r}
-training_data <- sam
-testing_data <- connection_events[,1:42]
-
-model <- ranger(
-    label~.,
-    data=training_data,
-    classification=TRUE
-)
-
-predictions <- predict(model, data=testing_data)
-
-confusion_matrix <- table(testing_data$label, predictions$predictions)
-
-confusion_matrix
-
-print(sum(diag(confusion_matrix))/sum(confusion_matrix))
+sam <- simplesampling(connection_events, nsam)
+confusion_matrix <- randomforest(sam, connection_events[,1:42])
 ```
 
 2.K-means
@@ -311,8 +258,9 @@ ktable <- function(data, nclass, nsam=494020){
     for(i in unique(data$label)){
       kmeansdata <- sample_events[which(sample_events[,42]==i),1:41]
       s <- sample_events[which(sample_events[,42]==i),1:42]
-      # It's no meaning to do kmeans for tiny size
+      # It's no meaning to do kmeans for data with tiny size
       if(nrow(s)>nclass+100){
+        #Kmeans
         Cluster <- kmeans(kmeansdata, nclass, nstart = 20)
         centers <- Cluster$centers
         centers <- cbind(centers, label=rep(i, nclass))
@@ -326,26 +274,8 @@ ktable <- function(data, nclass, nsam=494020){
     }
     return(list(ktable,data))
 }
-
-training_undersampling <- function(results){
-    training_data <- results[[1]]
-    testing_data <- results[[2]]
-    
-    model <- ranger(
-        label~.,
-        data=training_data,
-        classification=TRUE
-    )
-    
-    predictions <- predict(model, data=testing_data)
-    
-    confusion_matrix <- table(testing_data$label, predictions$predictions)
-    
-    print(sum(diag(confusion_matrix))/sum(confusion_matrix))
-    
-    return(confusion_matrix)
-}
 ```
+
 
 ## K-means: 23 attacks
 ## select 20 centers for data has a big size
@@ -355,7 +285,8 @@ data <- str2integer(connection_events)
 nclass = 20
 
 results <- ktable(data, nclass)
-confusion_matrix<-training_undersampling(results)
+
+confusion_matrix<-randomforest(results[[1]],results[[2]])
 
 ```
 
@@ -390,32 +321,33 @@ for(i in 1:length(type[[1]])){
   connection_events$type[which(connection_events$label == name)]<-type[[2]][i]
 }
 connection_events$type[which(is.na(connection_events$type))]<-"normal"
-unique(connection_events$type)
-connection_events
+for(i in unique(connection_events$type)){
+  name <- paste0("is_",i)
+  assign(name, connection_events[which(connection_events$type==i)])
+}
 ```
 
 # Sampling 20 rows with bad results
 
 ```{r}
 nsam = 20
-sam <- data.frame()
-for(i in unique(connection_events$type)){
-  name = paste0("is_",i)
-  name = get(name)
-  if(nrow(name)>=20){
-    index = sample(c(1:nrow(name)),size=nsam)
-    sam <- rbind(sam, name[index,1:42])
-  }
-  else{
-    index = sample(c(1:nrow(name)),size=nrow(name))
-    sam <- rbind(sam, name[index,1:42])
-  }
-}
+sam <- simplesampling(connection_events, nsam, columnname = "type")
+connection_events<-
+confusion_matrix <- randomforest(sam, connection_events[,1:42])
 ```
+## Sampling 50 rows 
+
+```{r}
+nsam = 50
+sam <- simplesampling(connection_events, nsam, columnname = "type")
+confusion_matrix <- randomforest(sam, connection_events[,1:42])
+```
+
 
 Oversampling
   --- add data from whole data
-  
+
+
 
   --- create data by SMOTE
 Weight
